UnnamedLanguageParser.java
// $ANTLR 3.0.1 UnnamedLanguage.g 2018-01-12 16:24:17

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class UnnamedLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "KW_TRUE", "KW_FALSE", "KW_IF", "KW_ELSE", "KW_WHILE", "KW_PRINT", "KW_PRINTLN", "KW_RETURN", "KW_INT", "KW_FLOAT", "KW_CHAR", "KW_STRING", "KW_BOOLEAN", "KW_VOID", "INTEGER_CONSTANT", "OP_EQUALS", "OP_LESSTHAN", "OP_PLUS", "OP_MINUS", "OP_MUL", "STRING_CONSTANT", "FLOAT_CONSTANT", "CHARACTER_CONSTANT", "ID", "EXPONENT", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "COMMENT", "WS", "'('", "')'", "','", "'{'", "'}'", "';'", "'['", "']'", "'='"
    };
    public static final int KW_WHILE=8;
    public static final int KW_RETURN=11;
    public static final int UNICODE_ESC=31;
    public static final int OP_PLUS=21;
    public static final int KW_BOOLEAN=16;
    public static final int KW_TRUE=4;
    public static final int KW_CHAR=14;
    public static final int KW_VOID=17;
    public static final int KW_INT=12;
    public static final int INTEGER_CONSTANT=18;
    public static final int COMMENT=33;
    public static final int CHARACTER_CONSTANT=26;
    public static final int HEX_DIGIT=30;
    public static final int KW_IF=6;
    public static final int OP_MINUS=22;
    public static final int ESC_SEQ=29;
    public static final int KW_PRINT=9;
    public static final int OP_EQUALS=19;
    public static final int STRING_CONSTANT=24;
    public static final int ID=27;
    public static final int WS=34;
    public static final int EOF=-1;
    public static final int OCTAL_ESC=32;
    public static final int KW_PRINTLN=10;
    public static final int OP_MUL=23;
    public static final int KW_ELSE=7;
    public static final int KW_STRING=15;
    public static final int OP_LESSTHAN=20;
    public static final int KW_FLOAT=13;
    public static final int EXPONENT=28;
    public static final int KW_FALSE=5;
    public static final int FLOAT_CONSTANT=25;

        public UnnamedLanguageParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[32+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "UnnamedLanguage.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }



    // $ANTLR start program
    // UnnamedLanguage.g:46:1: program : ( function )+ ;
    public final void program() throws RecognitionException {
        try {
            // UnnamedLanguage.g:47:2: ( ( function )+ )
            // UnnamedLanguage.g:47:4: ( function )+
            {
            // UnnamedLanguage.g:47:4: ( function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=KW_INT && LA1_0<=KW_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // UnnamedLanguage.g:47:4: function
            	    {
            	    pushFollow(FOLLOW_function_in_program201);
            	    function();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end program


    // $ANTLR start function
    // UnnamedLanguage.g:49:1: function : functionDecl functionBody ;
    public final void function() throws RecognitionException {
        try {
            // UnnamedLanguage.g:50:2: ( functionDecl functionBody )
            // UnnamedLanguage.g:50:4: functionDecl functionBody
            {
            pushFollow(FOLLOW_functionDecl_in_function212);
            functionDecl();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_functionBody_in_function214);
            functionBody();
            _fsp--;
            if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end function


    // $ANTLR start functionDecl
    // UnnamedLanguage.g:52:1: functionDecl : compoundType identifier '(' formalParameters ')' ;
    public final void functionDecl() throws RecognitionException {
        try {
            // UnnamedLanguage.g:53:2: ( compoundType identifier '(' formalParameters ')' )
            // UnnamedLanguage.g:53:4: compoundType identifier '(' formalParameters ')'
            {
            pushFollow(FOLLOW_compoundType_in_functionDecl225);
            compoundType();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_identifier_in_functionDecl227);
            identifier();
            _fsp--;
            if (failed) return ;
            match(input,35,FOLLOW_35_in_functionDecl229); if (failed) return ;
            pushFollow(FOLLOW_formalParameters_in_functionDecl231);
            formalParameters();
            _fsp--;
            if (failed) return ;
            match(input,36,FOLLOW_36_in_functionDecl233); if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end functionDecl


    // $ANTLR start formalParameters
    // UnnamedLanguage.g:55:1: formalParameters : ( | compoundType identifier ( moreFormals )* );
    public final void formalParameters() throws RecognitionException {
        try {
            // UnnamedLanguage.g:56:2: ( | compoundType identifier ( moreFormals )* )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==36) ) {
                alt3=1;
            }
            else if ( ((LA3_0>=KW_INT && LA3_0<=KW_VOID)) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("55:1: formalParameters : ( | compoundType identifier ( moreFormals )* );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // UnnamedLanguage.g:57:2: 
                    {
                    }
                    break;
                case 2 :
                    // UnnamedLanguage.g:57:4: compoundType identifier ( moreFormals )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters248);
                    compoundType();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_identifier_in_formalParameters250);
                    identifier();
                    _fsp--;
                    if (failed) return ;
                    // UnnamedLanguage.g:57:28: ( moreFormals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==37) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // UnnamedLanguage.g:57:28: moreFormals
                    	    {
                    	    pushFollow(FOLLOW_moreFormals_in_formalParameters252);
                    	    moreFormals();
                    	    _fsp--;
                    	    if (failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end formalParameters


    // $ANTLR start moreFormals
    // UnnamedLanguage.g:60:1: moreFormals : ',' compoundType identifier ;
    public final void moreFormals() throws RecognitionException {
        try {
            // UnnamedLanguage.g:61:2: ( ',' compoundType identifier )
            // UnnamedLanguage.g:61:4: ',' compoundType identifier
            {
            match(input,37,FOLLOW_37_in_moreFormals265); if (failed) return ;
            pushFollow(FOLLOW_compoundType_in_moreFormals267);
            compoundType();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_identifier_in_moreFormals269);
            identifier();
            _fsp--;
            if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end moreFormals


    // $ANTLR start functionBody
    // UnnamedLanguage.g:63:1: functionBody : '{' ( varDecl )* ( statement )* '}' ;
    public final void functionBody() throws RecognitionException {
        try {
            // UnnamedLanguage.g:64:2: ( '{' ( varDecl )* ( statement )* '}' )
            // UnnamedLanguage.g:64:4: '{' ( varDecl )* ( statement )* '}'
            {
            match(input,38,FOLLOW_38_in_functionBody280); if (failed) return ;
            // UnnamedLanguage.g:64:8: ( varDecl )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=KW_INT && LA4_0<=KW_VOID)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // UnnamedLanguage.g:64:8: varDecl
            	    {
            	    pushFollow(FOLLOW_varDecl_in_functionBody282);
            	    varDecl();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // UnnamedLanguage.g:64:17: ( statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=KW_TRUE && LA5_0<=KW_IF)||(LA5_0>=KW_WHILE && LA5_0<=KW_RETURN)||LA5_0==INTEGER_CONSTANT||(LA5_0>=STRING_CONSTANT && LA5_0<=ID)||LA5_0==35||LA5_0==40) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // UnnamedLanguage.g:64:17: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody285);
            	    statement();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,39,FOLLOW_39_in_functionBody288); if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end functionBody


    // $ANTLR start varDecl
    // UnnamedLanguage.g:66:1: varDecl : compoundType identifier ';' ;
    public final void varDecl() throws RecognitionException {
        try {
            // UnnamedLanguage.g:66:9: ( compoundType identifier ';' )
            // UnnamedLanguage.g:66:11: compoundType identifier ';'
            {
            pushFollow(FOLLOW_compoundType_in_varDecl297);
            compoundType();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_identifier_in_varDecl299);
            identifier();
            _fsp--;
            if (failed) return ;
            match(input,40,FOLLOW_40_in_varDecl301); if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end varDecl


    // $ANTLR start compoundType
    // UnnamedLanguage.g:68:1: compoundType : ( type | type '[' INTEGER_CONSTANT ']' );
    public final void compoundType() throws RecognitionException {
        try {
            // UnnamedLanguage.g:69:2: ( type | type '[' INTEGER_CONSTANT ']' )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=KW_INT && LA6_0<=KW_VOID)) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ID) ) {
                    alt6=1;
                }
                else if ( (LA6_1==41) ) {
                    alt6=2;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("68:1: compoundType : ( type | type '[' INTEGER_CONSTANT ']' );", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("68:1: compoundType : ( type | type '[' INTEGER_CONSTANT ']' );", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // UnnamedLanguage.g:69:4: type
                    {
                    pushFollow(FOLLOW_type_in_compoundType311);
                    type();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // UnnamedLanguage.g:70:4: type '[' INTEGER_CONSTANT ']'
                    {
                    pushFollow(FOLLOW_type_in_compoundType316);
                    type();
                    _fsp--;
                    if (failed) return ;
                    match(input,41,FOLLOW_41_in_compoundType318); if (failed) return ;
                    match(input,INTEGER_CONSTANT,FOLLOW_INTEGER_CONSTANT_in_compoundType320); if (failed) return ;
                    match(input,42,FOLLOW_42_in_compoundType322); if (failed) return ;

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end compoundType


    // $ANTLR start type
    // UnnamedLanguage.g:73:1: type : ( KW_INT | KW_FLOAT | KW_CHAR | KW_STRING | KW_BOOLEAN | KW_VOID );
    public final void type() throws RecognitionException {
        try {
            // UnnamedLanguage.g:74:2: ( KW_INT | KW_FLOAT | KW_CHAR | KW_STRING | KW_BOOLEAN | KW_VOID )
            // UnnamedLanguage.g:
            {
            if ( (input.LA(1)>=KW_INT && input.LA(1)<=KW_VOID) ) {
                input.consume();
                errorRecovery=false;failed=false;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                MismatchedSetException mse =
                    new MismatchedSetException(null,input);
                recoverFromMismatchedSet(input,mse,FOLLOW_set_in_type0);    throw mse;
            }


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end type


    // $ANTLR start statement
    // UnnamedLanguage.g:82:1: statement options {backtrack=true; } : ( ';' | KW_IF '(' expr ')' block ( KW_ELSE block )? | KW_WHILE '(' expr ')' block | KW_PRINT expr ';' | KW_PRINTLN expr ';' | KW_RETURN ( expr )? ';' | identifier '[' expr ']' '=' expr ';' | identifier '=' expr ';' | expr ';' );
    public final void statement() throws RecognitionException {
        try {
            // UnnamedLanguage.g:83:2: ( ';' | KW_IF '(' expr ')' block ( KW_ELSE block )? | KW_WHILE '(' expr ')' block | KW_PRINT expr ';' | KW_PRINTLN expr ';' | KW_RETURN ( expr )? ';' | identifier '[' expr ']' '=' expr ';' | identifier '=' expr ';' | expr ';' )
            int alt9=9;
            switch ( input.LA(1) ) {
            case 40:
                {
                alt9=1;
                }
                break;
            case KW_IF:
                {
                alt9=2;
                }
                break;
            case KW_WHILE:
                {
                alt9=3;
                }
                break;
            case KW_PRINT:
                {
                alt9=4;
                }
                break;
            case KW_PRINTLN:
                {
                alt9=5;
                }
                break;
            case KW_RETURN:
                {
                alt9=6;
                }
                break;
            case ID:
                {
                int LA9_7 = input.LA(2);

                if ( (synpred7()) ) {
                    alt9=7;
                }
                else if ( (synpred8()) ) {
                    alt9=8;
                }
                else if ( (true) ) {
                    alt9=9;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("82:1: statement options {backtrack=true; } : ( ';' | KW_IF '(' expr ')' block ( KW_ELSE block )? | KW_WHILE '(' expr ')' block | KW_PRINT expr ';' | KW_PRINTLN expr ';' | KW_RETURN ( expr )? ';' | identifier '[' expr ']' '=' expr ';' | identifier '=' expr ';' | expr ';' );", 9, 7, input);

                    throw nvae;
                }
                }
                break;
            case KW_TRUE:
            case KW_FALSE:
            case INTEGER_CONSTANT:
            case STRING_CONSTANT:
            case FLOAT_CONSTANT:
            case CHARACTER_CONSTANT:
            case 35:
                {
                alt9=9;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("82:1: statement options {backtrack=true; } : ( ';' | KW_IF '(' expr ')' block ( KW_ELSE block )? | KW_WHILE '(' expr ')' block | KW_PRINT expr ';' | KW_PRINTLN expr ';' | KW_RETURN ( expr )? ';' | identifier '[' expr ']' '=' expr ';' | identifier '=' expr ';' | expr ';' );", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // UnnamedLanguage.g:83:4: ';'
                    {
                    match(input,40,FOLLOW_40_in_statement381); if (failed) return ;

                    }
                    break;
                case 2 :
                    // UnnamedLanguage.g:84:4: KW_IF '(' expr ')' block ( KW_ELSE block )?
                    {
                    match(input,KW_IF,FOLLOW_KW_IF_in_statement386); if (failed) return ;
                    match(input,35,FOLLOW_35_in_statement388); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement390);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,36,FOLLOW_36_in_statement392); if (failed) return ;
                    pushFollow(FOLLOW_block_in_statement394);
                    block();
                    _fsp--;
                    if (failed) return ;
                    // UnnamedLanguage.g:84:29: ( KW_ELSE block )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==KW_ELSE) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // UnnamedLanguage.g:84:30: KW_ELSE block
                            {
                            match(input,KW_ELSE,FOLLOW_KW_ELSE_in_statement397); if (failed) return ;
                            pushFollow(FOLLOW_block_in_statement399);
                            block();
                            _fsp--;
                            if (failed) return ;

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // UnnamedLanguage.g:85:4: KW_WHILE '(' expr ')' block
                    {
                    match(input,KW_WHILE,FOLLOW_KW_WHILE_in_statement406); if (failed) return ;
                    match(input,35,FOLLOW_35_in_statement408); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement410);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,36,FOLLOW_36_in_statement412); if (failed) return ;
                    pushFollow(FOLLOW_block_in_statement414);
                    block();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 4 :
                    // UnnamedLanguage.g:86:4: KW_PRINT expr ';'
                    {
                    match(input,KW_PRINT,FOLLOW_KW_PRINT_in_statement419); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement421);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,40,FOLLOW_40_in_statement423); if (failed) return ;

                    }
                    break;
                case 5 :
                    // UnnamedLanguage.g:87:4: KW_PRINTLN expr ';'
                    {
                    match(input,KW_PRINTLN,FOLLOW_KW_PRINTLN_in_statement428); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement430);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,40,FOLLOW_40_in_statement432); if (failed) return ;

                    }
                    break;
                case 6 :
                    // UnnamedLanguage.g:88:4: KW_RETURN ( expr )? ';'
                    {
                    match(input,KW_RETURN,FOLLOW_KW_RETURN_in_statement437); if (failed) return ;
                    // UnnamedLanguage.g:88:14: ( expr )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( ((LA8_0>=KW_TRUE && LA8_0<=KW_FALSE)||LA8_0==INTEGER_CONSTANT||(LA8_0>=STRING_CONSTANT && LA8_0<=ID)||LA8_0==35) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // UnnamedLanguage.g:88:14: expr
                            {
                            pushFollow(FOLLOW_expr_in_statement439);
                            expr();
                            _fsp--;
                            if (failed) return ;

                            }
                            break;

                    }

                    match(input,40,FOLLOW_40_in_statement442); if (failed) return ;

                    }
                    break;
                case 7 :
                    // UnnamedLanguage.g:89:4: identifier '[' expr ']' '=' expr ';'
                    {
                    pushFollow(FOLLOW_identifier_in_statement447);
                    identifier();
                    _fsp--;
                    if (failed) return ;
                    match(input,41,FOLLOW_41_in_statement449); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement451);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,42,FOLLOW_42_in_statement453); if (failed) return ;
                    match(input,43,FOLLOW_43_in_statement455); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement457);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,40,FOLLOW_40_in_statement459); if (failed) return ;

                    }
                    break;
                case 8 :
                    // UnnamedLanguage.g:90:4: identifier '=' expr ';'
                    {
                    pushFollow(FOLLOW_identifier_in_statement465);
                    identifier();
                    _fsp--;
                    if (failed) return ;
                    match(input,43,FOLLOW_43_in_statement467); if (failed) return ;
                    pushFollow(FOLLOW_expr_in_statement469);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,40,FOLLOW_40_in_statement471); if (failed) return ;

                    }
                    break;
                case 9 :
                    // UnnamedLanguage.g:91:4: expr ';'
                    {
                    pushFollow(FOLLOW_expr_in_statement476);
                    expr();
                    _fsp--;
                    if (failed) return ;
                    match(input,40,FOLLOW_40_in_statement478); if (failed) return ;

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end statement


    // $ANTLR start block
    // UnnamedLanguage.g:94:1: block : '{' ( statement )* '}' ;
    public final void block() throws RecognitionException {
        try {
            // UnnamedLanguage.g:95:2: ( '{' ( statement )* '}' )
            // UnnamedLanguage.g:95:4: '{' ( statement )* '}'
            {
            match(input,38,FOLLOW_38_in_block489); if (failed) return ;
            // UnnamedLanguage.g:95:8: ( statement )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=KW_TRUE && LA10_0<=KW_IF)||(LA10_0>=KW_WHILE && LA10_0<=KW_RETURN)||LA10_0==INTEGER_CONSTANT||(LA10_0>=STRING_CONSTANT && LA10_0<=ID)||LA10_0==35||LA10_0==40) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // UnnamedLanguage.g:95:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block491);
            	    statement();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            match(input,39,FOLLOW_39_in_block494); if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end block


    // $ANTLR start expr
    // UnnamedLanguage.g:97:1: expr : expr2 exprEquals ;
    public final void expr() throws RecognitionException {
        try {
            // UnnamedLanguage.g:98:2: ( expr2 exprEquals )
            // UnnamedLanguage.g:98:4: expr2 exprEquals
            {
            pushFollow(FOLLOW_expr2_in_expr504);
            expr2();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_exprEquals_in_expr506);
            exprEquals();
            _fsp--;
            if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end expr


    // $ANTLR start exprEquals
    // UnnamedLanguage.g:100:1: exprEquals : ( OP_EQUALS expr2 exprEquals | );
    public final void exprEquals() throws RecognitionException {
        try {
            // UnnamedLanguage.g:101:2: ( OP_EQUALS expr2 exprEquals | )
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==OP_EQUALS) ) {
                alt11=1;
            }
            else if ( ((LA11_0>=36 && LA11_0<=37)||LA11_0==40||LA11_0==42) ) {
                alt11=2;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("100:1: exprEquals : ( OP_EQUALS expr2 exprEquals | );", 11, 0, input);

                throw nvae;
            }
            switch (alt11) {
                case 1 :
                    // UnnamedLanguage.g:101:4: OP_EQUALS expr2 exprEquals
                    {
                    match(input,OP_EQUALS,FOLLOW_OP_EQUALS_in_exprEquals516); if (failed) return ;
                    pushFollow(FOLLOW_expr2_in_exprEquals518);
                    expr2();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_exprEquals_in_exprEquals520);
                    exprEquals();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // UnnamedLanguage.g:103:2: 
                    {
                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end exprEquals


    // $ANTLR start expr2
    // UnnamedLanguage.g:105:1: expr2 : expr3 exprLessThan ;
    public final void expr2() throws RecognitionException {
        try {
            // UnnamedLanguage.g:106:2: ( expr3 exprLessThan )
            // UnnamedLanguage.g:106:4: expr3 exprLessThan
            {
            pushFollow(FOLLOW_expr3_in_expr2534);
            expr3();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_exprLessThan_in_expr2536);
            exprLessThan();
            _fsp--;
            if (failed) return ;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end expr2


    // $ANTLR start exprLessThan
    // UnnamedLanguage.g:109:1: exprLessThan : ( OP_LESSTHAN expr3 exprLessThan | );
    public final void exprLessThan() throws RecognitionException {
        try {
            // UnnamedLanguage.g:110:2: ( OP_LESSTHAN expr3 exprLessThan | )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==OP_LESSTHAN) ) {
                alt12=1;
            }
            else if ( (LA12_0==OP_EQUALS||(LA12_0>=36 && LA12_0<=37)||LA12_0==40||LA12_0==42) ) {
                alt12=2;
            }
            else {
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("109:1: exprLessThan : ( OP_LESSTHAN expr3 exprLessThan | );", 12, 0, input);

                throw nvae;
            }
            switch (alt12) {
                case 1 :
                    // UnnamedLanguage.g:110:4: OP_LESSTHAN expr3 exprLessThan
                    {
                    match(input,OP_LESSTHAN,FOLLOW_OP_LESSTHAN_in_exprLessThan547); if (failed) return ;
                    pushFollow(FOLLOW_expr3_in_exprLessThan549);
                    expr3();
                    _fsp--;
                    if (failed) return ;
                    pushFollow(FOLLOW_exprLessThan_in_exprLessThan551);
                    exprLessThan();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // UnnamedLanguage.g:112:2: 
                    {
                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return ;
    }
    // $ANTLR end exprLessThan

